Add code for the second assignment